fix product section align

--- a/style/style.css
+++ b/style/style.css
@@ -118,7 +118,7 @@ body {
 .emmetProduct {
   margin: 0 auto;
   display: flex;
-  max-width: 65%;
+  max-width: 70%;
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 4rem;
